react-app/src/components/Dashboard/Dashboard.css
#center__container {
    width: 80%;
    margin: 20px 0px 20px 20px;
    /* overflow-y: scroll; */
    display: flex;
    flex-direction: column;
}

#center__container--title {
    font-size: var(--h2-size);
    font-weight: 600;
    position: sticky;
}

#center__container--subtitle {
    justify-self: flex-end;
    align-self: flex-end;
    margin: 0 10px 3px;
    font-style: italic;
    font-weight: var(--weight-xlight);
}

#center__container--topbar {
    display: flex;
    gap: 7px;
}

#center__container--main-content {
    position: relative;
    height: 100%;
    margin-top: 8px;
    overflow-y: scroll;
    /* display: flex;
    flex-direction: column;
    justify-content: flex-end; */
}

#center__card--container {
    position: relative;
    height: 100%;
    overflow-y: scroll;
}

.dashboard__icon {
    width: 31px;
    height: 31px;
    min-width: 31px;
    min-height: 31px;
    margin: 2px 0 0;
    font-size: 0.8em;
}

.dashboard__icon--img {
    width: 31px;
    height: 31px;
    min-width: 31px;
    min-height: 31px;
}

